--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,15 +5,21 @@
 }
 /*  Comentario  */
 * {
+  /* border: 1px solid black; */
   padding: 0;
   margin: 0;
-  border: 1px solid blue;
+  box-sizing: border-box;
 }
 
 header {
   background-color: var(--primary-color);
-  height: 100px;
+  height: 10vh;
   width: 100%;
+  text-align: center;
+}
+
+header img {
+  width: 180px;
 }
 
 header h1 {
@@ -26,23 +32,27 @@ header h1 {
   box-sizing: border-box;
   background-color: var(--background-color);
   display: inline-block;
-  height: 70vh;
+  height: 50vh;
   width: 70%;
   vertical-align: top;
 }
 
 .pizzas {
   box-sizing: border-box;
-  background-color: pink;
+  background-color: var(--primary-color);
   display: inline-block;
-  height: 70vh;
+  height: 50vh;
   width: 30%;
   vertical-align: top;
 }
 
-
+.pizzas img {
+  display: block;
+  width: 90%;
+  margin: auto;
+}
 .ordenes {
-  min-height: 30vh;
+  min-height: 20vh;
   background-color: white;
 }
 
@@ -52,10 +62,13 @@ header h1 {
   border-radius: 4px;
   margin: 10px 15px;
   width: 300px;
+  color: var(--background-color);
+  text-align: center;
 }
 
 .pizza-orden img {
-  width: 100%;
+  width: 150px;
+  border-radius: 5px;
 }
 
 footer {
@@ -67,4 +80,40 @@ input {
   font-size: 25px;
   border-radius: 5px;
   width: 200px;
+  display: block;
+}
+
+input[type="submit"] {
+  background: var(--primary-color);
+  color: var(--background-color);
+}
+
+#pizza-form {
+  display: block;
+  margin: auto;
+  width: 300px;
+  padding: 20px;
+  background: #3C91E6;
+  color: white;
+  line-height: 1.5em;
+}
+#pizza-form label {
+  padding 20px;
+}
+
+footer {
+  margin-bottom: 0px;
+  background-color: var(--primary-color);
+  height: 10vh;
+}
+
+footer p {
+  color: var(--background-color);
+  text-align: center;
+  vertical-align: center;
+}
+
+.coupon {
+  display: inline;
+  width: 20px;
 }
